--- a/src/main/webapp/admin/categoryManagement.xhtml
+++ b/src/main/webapp/admin/categoryManagement.xhtml
@@ -36,7 +36,7 @@
         </p:toolbar>
 
         <p:dataTable id="dt-categories" widgetVar="dtCategories" var="category"
-                     value="#{categoryManagementBean.categoryList}" rowKey="#{category.id}" paginator="true" rows="10"
+                     value="#{categoryManagementBean.categoryList}" paginator="true" rows="10"
                      responsiveLayout="scroll">
 
             <p:column exportable="false" style="width: 3rem" />
