--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -39,7 +39,7 @@
         <hr style="margin-top: 20px;"/>
 
         <h:form id="logoutForm">
-            <p:commandButton value="Logout" action="#{employeeLoginBean.logout}"
+            <p:commandButton value="Logout" action="#{userSessionBean.logout}"
             icon="pi pi-sign-out" ajax="false" immediate="true"
             styleClass="ui-button-danger"/>
         </h:form>
