--- a/src/main/webapp/user/reset-password.xhtml
+++ b/src/main/webapp/user/reset-password.xhtml
@@ -6,33 +6,33 @@
 <h:head>
     <title>Reset Password</title>
     <f:metadata>
-        <f:viewParam name="token" value="#{passwordResetBean.token}" />
-        <f:viewAction action="#{passwordResetBean.init}" />
+        <f:viewParam name="token" value="#{userPasswordResetBean.token}" />
+        <f:viewAction action="#{userPasswordResetBean.init}" />
     </f:metadata>
 </h:head>
 <h:body>
     <p:panel header="Reset Password" style="width: 400px; margin: 50px auto;">
-        <h:panelGroup rendered="#{passwordResetBean.tokenValid}">
+        <h:panelGroup rendered="#{userPasswordResetBean.tokenValid}">
             <h:form id="passwordResetForm">
                 <p:messages id="messages" showDetail="true" closable="true" />
 
                 <h:panelGrid>
 
                     <p:outputLabel for="password" value="New Password" />
-                    <p:password id="password" value="#{passwordResetBean.newPassword}" match="confirmPassword" required="true"  requiredMessage="Password is required." style="width: 95%;" feedback="false" label="Password"/>
+                    <p:password id="password" value="#{userPasswordResetBean.password}" match="confirmPassword" required="true" requiredMessage="Password is required." style="width: 95%;" feedback="false" label="Password"/>
                     <p:message for="password" />
 
                     <p:outputLabel for="confirmPassword" value="Confirm Password" />
-                    <p:password id="confirmPassword" value="#{passwordResetBean.confirmPassword}" required="true"  requiredMessage="Confirm password is required." style="width: 95%;" feedback="false" label="Password"/>
+                    <p:password id="confirmPassword" value="#{userPasswordResetBean.confirmPassword}" required="true" requiredMessage="Confirm password is required." style="width: 95%;" feedback="false" label="Password"/>
                     <p:message for="confirmPassword" />
 
-                    <p:commandButton value="Reset Password" action="#{passwordResetBean.submit}" update=":passwordResetForm:messages"/>
+                    <p:commandButton value="Reset Password" action="#{userPasswordResetBean.submit}" update=":passwordResetForm:messages"/>
 
                 </h:panelGrid>
             </h:form>
         </h:panelGroup>
 
-        <h:panelGroup rendered="#{not passwordResetBean.tokenValid}">
+        <h:panelGroup rendered="#{not userPasswordResetBean.tokenValid}">
             <h:outputText value="This reset link is invalid or has expired." style="color:red;" />
         </h:panelGroup>
     </p:panel>
