--- a/src/main/webapp/user/signup.xhtml
+++ b/src/main/webapp/user/signup.xhtml
@@ -27,7 +27,7 @@
                 <p:message for="password"/>
 
                 <p:outputLabel for="confirmPassword" value="Confirm password:" style="display: block; margin-bottom: 3px; margin-top: 10px;"/>
-                <p:password id="confirmPassword" value="#{userSignUpBean.plainRepeatPassword}" required="true" requiredMessage="Confirming password is required." style="width: 95%;" feedback="false" label="Confirm Password"/>
+                <p:password id="confirmPassword" value="#{userSignUpBean.plainConfirmPassword}" required="true" requiredMessage="Confirming password is required." style="width: 95%;" feedback="false" label="Confirm Password"/>
                 <p:message for="confirmPassword"/>
 
                 <div style="margin-top: 15px; text-align: center;">
