--- a/src/main/webapp/user/forgot-password.xhtml
+++ b/src/main/webapp/user/forgot-password.xhtml
@@ -14,11 +14,11 @@
             <h:panelGrid columns="1" cellpadding="5" style="width: 100%;">
 
                 <p:outputLabel for="email" value="E-mail:" style="display: block; margin-bottom: 3px;"/>
-                <p:inputText id="email" value="#{passwordForgotBean.email}" required="true" requiredMessage="E-mail is required." style="width: 95%;" label="E-mail"/>
+                <p:inputText id="email" value="#{userPasswordForgotBean.email}" required="true" requiredMessage="E-mail is required." style="width: 95%;" label="E-mail"/>
                 <p:message for="email"/>
 
                 <div style="margin-top: 15px; text-align: center;">
-                    <p:commandButton value="Send reset e-mail" action="#{passwordForgotBean.requestPasswordChange()}" update=":passwordForgotForm:messages" icon="pi pi-envelope"/>
+                    <p:commandButton value="Send reset e-mail" action="#{userPasswordForgotBean.requestPasswordReset()}" update=":passwordForgotForm:messages" icon="pi pi-envelope"/>
                 </div>
 
             </h:panelGrid>
