--- a/src/main/webapp/user/order-view.xhtml
+++ b/src/main/webapp/user/order-view.xhtml
@@ -26,7 +26,7 @@
    <p:sidebar widgetVar="sidebar2" position="right">
       <h3>Options</h3>
       <h:form id="logoutForm">
-         <p:commandButton value="Logout" action="#{userLoginBean.logout}"
+         <p:commandButton value="Logout" action="#{userSessionBean.logout}"
                           icon="pi pi-sign-out" ajax="false" immediate="true"
                           styleClass="ui-button-danger"/>
       </h:form>
