refactored authentication, registration and credential changing logic by moving from beans to services

--- a/src/main/webapp/admin/ingTypeManagement.xhtml
+++ b/src/main/webapp/admin/ingTypeManagement.xhtml
@@ -38,7 +38,7 @@
         </p:toolbar>
 
         <p:dataTable id="dt-ingredientTypes" widgetVar="dtIngredientTypes" var="ingredientType"
-                     value="#{ingTypeManagementBean.ingredientTypeList}" rowKey="#{ingredientType.id}" paginator="true" rows="10"
+                     value="#{ingTypeManagementBean.ingredientTypeList}" paginator="true" rows="10"
                      responsiveLayout="scroll">
 
             <p:column exportable="false" style="width: 3rem" />
