--- a/src/main/webapp/admin/ingredientManagement.xhtml
+++ b/src/main/webapp/admin/ingredientManagement.xhtml
@@ -37,7 +37,7 @@
         </p:toolbar>
 
         <p:dataTable id="dt-ingredients" widgetVar="dtIngredients" var="ingredient"
-                     value="#{ingredientManagementBean.ingredientList}" rowKey="#{ingredient.id}" paginator="true" rows="10"
+                     value="#{ingredientManagementBean.ingredientList}" paginator="true" rows="10"
                      responsiveLayout="scroll">
 
             <p:column  exportable="false" style="width: 3rem"/>
