--- a/src/main/webapp/admin/productManagement.xhtml
+++ b/src/main/webapp/admin/productManagement.xhtml
@@ -35,7 +35,7 @@
         </p:toolbar>
 
         <p:dataTable id="dt-products" widgetVar="dtProducts" var="product"
-                     value="#{productManagementBean.productList}" rowKey="#{product.id}" paginator="true" rows="10"
+                     value="#{productManagementBean.productList}" paginator="true" rows="10"
                      responsiveLayout="scroll">
 
             <p:column  exportable="false" style="width: 3rem"/>
