--- a/src/main/webapp/user/menu.xhtml
+++ b/src/main/webapp/user/menu.xhtml
@@ -65,7 +65,7 @@
          <p:button value="View Order" outcome="/user/order-view.xhtml" icon="pi pi-shopping-cart" style="margin-bottom: 10px; display:block;"/>
          <p:button value="Menu" outcome="/user/menu.xhtml" icon="pi pi-tags" style="margin-bottom: 10px; display:block;" />
          <p:button value="Change e-mail" outcome="/user/email-change.xhtml" icon="pi pi-envelope" style="margin-bottom: 10px; display:block;" />
-         <p:commandButton value="Logout" action="#{userLoginBean.logout}"
+         <p:commandButton value="Logout" action="#{userSessionBean.logout}"
                           icon="pi pi-sign-out" ajax="false" immediate="true"
                           styleClass="ui-button-danger" style="display:block;"/>
       </h:form>
@@ -99,11 +99,11 @@
                         <h3 class="addon-type-name">#{addonType.name}</h3>
                         <p:panelGrid columns="4" styleClass="ui-noborder" style="width:100%">
                             <p:selectOneRadio id="addonRadio_#{addonType.id}" value="#{showProductBean.selectedAddonsByType[addonType.id]}" layout="grid" columns="4">
-                                <f:selectItems value="#{showProductBean.getAvailableAddonsForType(addonType.id)}" 
-                                              var="addon" 
-                                              itemLabel="#{addon.name} (+$#{addon.price})" 
+                                <f:selectItems value="#{showProductBean.getAvailableAddonsForType(addonType.id)}"
+                                              var="addon"
+                                              itemLabel="#{addon.name} (+$#{addon.price})"
                                               itemValue="#{addon.id}" />
-                                <p:ajax listener="#{showProductBean.selectAddonForType(addonType.id)}" 
+                                <p:ajax listener="#{showProductBean.selectAddonForType(addonType.id)}"
                                         update=":confirmForm:unitPricePanel :confirmForm:totalPricePanel" />
                             </p:selectOneRadio>
                         </p:panelGrid>
@@ -133,14 +133,14 @@
             </div>
 
             <div class="mt-3">
-                <p:commandButton value="Add to Cart" 
+                <p:commandButton value="Add to Cart"
                                actionListener="#{showProductBean.updateSelectedAddonsList()}"
                                action="#{orderBean.addItemToOrder(showProductBean.selectedProduct, showProductBean.quantity, showProductBean.selectedAddons)}"
                                oncomplete="PF('confirmDialog').hide(); #{showProductBean.resetQuantity()}"
                                update=":pageGrowl :sidebarMenuForm:orderItemCountOutputPanel"
                                styleClass="ui-button-success mr-2"/>
-                <p:commandButton value="Cancel" 
-                               onclick="PF('confirmDialog').hide()" 
+                <p:commandButton value="Cancel"
+                               onclick="PF('confirmDialog').hide()"
                                type="button"
                                styleClass="ui-button-secondary"/>
             </div>
