adding pages for admin, and redirection to dashboard for employee

--- a/src/main/webapp/admin/change-password.xhtml
+++ b/src/main/webapp/admin/change-password.xhtml
@@ -10,7 +10,7 @@
    <title>Change Your Password</title>
 </h:head>
 
-<h:body>
+<h:body rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">
    <p:growl id="gloabMsgs" globalOnly="true" showDetail="true" closable="true" style="position: fixed; top: 20px; right: 20px; z-index: 9999; width: 350px;"/>
 
    <h:form id="changePasswordForm">
