--- a/src/main/webapp/admin/dashboard.xhtml
+++ b/src/main/webapp/admin/dashboard.xhtml
@@ -7,7 +7,7 @@
     <title>Admin Dashboard</title>
 </h:head>
 
-<h:body>
+<h:body rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">
 
     <p:panel header="Admin Dashboard">
 
@@ -17,7 +17,6 @@
         </p>
         <p>Your Role:
             <h:panelGroup rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">ADMIN</h:panelGroup>
-            <h:panelGroup rendered="#{sessionScope.loggedInUserRole == 'EMPLOYEE'}">EMPLOYEE</h:panelGroup>
         </p>
 
         <hr/>
