--- a/src/main/webapp/admin/ingTypeManagement.xhtml
+++ b/src/main/webapp/admin/ingTypeManagement.xhtml
@@ -7,7 +7,7 @@
 <h:head>
     <title>Ingredient Type Management</title>
 </h:head>
-<h:body>
+<h:body rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">
 
 
     <h:form>
