--- a/src/main/webapp/admin/productManagement.xhtml
+++ b/src/main/webapp/admin/productManagement.xhtml
@@ -6,7 +6,7 @@
 <h:head>
     <title>Product Management</title>
 </h:head>
-<h:body>
+<h:body rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">
 
     <h:form>
         <p:menubar>
