--- a/src/main/webapp/user/checkout-confirm.xhtml
+++ b/src/main/webapp/user/checkout-confirm.xhtml
@@ -7,6 +7,67 @@
 
 <h:head>
     <title>Confirm Your Order</title>
+    <script src="https://js.stripe.com/v3/"></script>
+    <script>
+        const stripe = Stripe('pk_test_51RTQGYRswKqOieK7YTkIYIOla4tIeBfW4n1QPS6VpblKzo6V6yKloKdjVzCxnszCxQ9RqNxyTSnuvi331m8VFMcS00cPLB2YrK');
+
+
+        function checkStripeAndContinue() {
+            const stripeReadyElement = document.querySelector('#finalCheckoutForm\\:stripeReady');
+
+            if (stripeReadyElement &amp;&amp; stripeReadyElement.value === 'true') {
+                initiateStripePayment();
+            } else {
+                console.warn("Stripe payment not initiated — order was not saved.");
+            }
+        }
+
+
+        function initiateStripePayment() {
+            const orderTotalElement = document.querySelector('#finalCheckoutForm\\:hiddenOrderTotalField');
+            const customerNameElement = document.querySelector('#finalCheckoutForm\\:finalCustName');
+            const customerEmailElement = document.querySelector('#finalCheckoutForm\\:finalCustEmail');
+            const orderIdElement = document.querySelector('#finalCheckoutForm\\:orderIdField')
+
+            if (!orderTotalElement || !customerNameElement || !customerEmailElement) {
+                alert("Missing required payment info.");
+                return;
+            }
+
+            const orderTotal = parseFloat(orderTotalElement.value);
+            const customerName = customerNameElement.value;
+            const customerEmail = customerEmailElement.value;
+            const orderId = orderIdElement.value;
+
+            fetch('http://localhost:9080/coffee-1.0-SNAPSHOT/api/payment/create-session', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                    customerName: customerName,
+                    customerEmail: customerEmail,
+                    orderTotal: orderTotal,
+                    orderId: orderId,
+                    currency: "eur"
+                })
+            })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.sessionId) {
+                        stripe.redirectToCheckout({ sessionId: data.sessionId });
+                    } else {
+                        alert('Failed to create Stripe session.');
+                    }
+                })
+                .catch(err => {
+                    console.error('Stripe session error:', err);
+                    alert('Unexpected error while initiating payment.');
+                });
+        }
+    </script>
+
+
 </h:head>
 <h:body>
     <p:growl id="checkoutConfirmMessages" showDetail="true" life="5000" />
@@ -38,17 +99,28 @@
             <div style="text-align:right; font-size:1.3em; margin:15px 0;">
                 <strong>Order Total:
                     <h:outputText value="#{checkoutConfirmBean.orderToConfirm.totalPrice}">
-                        <f:convertNumber type="currency" currencySymbol="$"/>
+                        <f:convertNumber type="currency" currencySymbol="€"/>
                     </h:outputText>
                 </strong>
             </div>
 
+            <h:inputHidden id="hiddenOrderTotalField" value="#{checkoutConfirmBean.orderToConfirm.totalPrice}" />
+            <h:inputHidden id="stripeReady" value="#{checkoutConfirmBean.stripeReady}" />
+            <h:inputHidden id="orderIdField" value="#{checkoutConfirmBean.orderId}" />
+
+
+
             <div style="text-align:right;">
                 <p:button value="Back to Edit Order" outcome="/user/order-view.xhtml" icon="pi pi-arrow-left" styleClass="ui-button-secondary" style="margin-right:10px;"/>
-                <p:commandButton value="Submit Final Order" action="#{checkoutConfirmBean.submitFinalOrder}"
-                                 update="@form checkoutConfirmMessages" process="@form"
-                                 icon="pi pi-check" styleClass="ui-button-success"
-                                 onstart="PF('finalSubmitStatusDialog').show()" onsuccess="PF('finalSubmitStatusDialog').hide()"/>
+
+                <p:commandButton value="Submit and Pay"
+                                 action="#{checkoutConfirmBean.submitFinalOrder}"
+                                 update="@form checkoutConfirmMessages stripeReady"
+                                 process="@form"
+                                 icon="pi pi-check"
+                                 styleClass="ui-button-success"
+                                 oncomplete="checkStripeAndContinue();"/>
+
             </div>
         </p:panel>
     </h:form>
@@ -60,6 +132,8 @@
     <p:ajaxStatus widgetVar="finalSubmitStatusDialog" modal="true">
         <f:facet name="start"><h:outputText value="Submitting Order..." /></f:facet>
     </p:ajaxStatus>
+
+
 
 </h:body>
 </html>
