--- a/src/main/webapp/admin/add-employee.xhtml
+++ b/src/main/webapp/admin/add-employee.xhtml
@@ -12,6 +12,11 @@
 <h:body>
     <div class="card" style="padding: 20px;">
         <h:form id="signUpForm" rendered="#{sessionScope.loggedInUserRole == 'ADMIN'}">
+            <p:toolbar>
+                <p:toolbarGroup align="right">
+                    <p:button value="Back to Dashboard" outcome="/admin/dashboard.xhtml" icon="pi pi-home"/>
+                </p:toolbarGroup>
+            </p:toolbar>
             <p:panel header="Employee Sign Up" style="margin-bottom: 10px; border: none;">
 
                 <p:messages id="messages" globalOnly="false" showDetail="true" closable="true">
